--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
 
       let guessCount = 1;
       let resetButton;
+      guessField.focus();
 
       function checkGuess() {
         const userGuess = Number(guessField.value);
